Minor improvements: documentation, warnings